add build back to the dockerfile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -54,9 +54,10 @@ RUN wget ${HDF_NEXUS_URL} &&\
 ARG NEXUS_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/BaldEagleDamBrk.g03.hdf"
 RUN wget ${NEXUS_TEST_DATA}
 
-#finish but no build. Build was failing and it was difficult to troubleshoot because I couldn't run in container. 
+
 RUN cd /src/ras-runner &&\
     go mod tidy 
+    go build
 
 
 
