--- a/Dockerfile_6.4.1
+++ b/Dockerfile_6.4.1
@@ -20,8 +20,8 @@ ARG RAS_LIB_DIR=HEC-RAS_641_Linux_EngineOnly/libs
 RUN wget ${NEXUS_RAS_URL} &&\ 
     unzip ${RAS_FILE} &&\
     mkdir /ras &&\
-    mv /${RAS_BIN_DIR} /ras/libs &&\
-    mv /${RAS_LIB_DIR} /ras/bin &&\
+    mv /${RAS_LIB_DIR} /ras/libs &&\
+    mv /${RAS_BIN_DIR} /ras/bin &&\
     chmod -R +x /ras/* 
 
 #set up Go
