--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,58 +1,36 @@
-FROM rockylinux:8
+FROM 038611608639.dkr.ecr.us-east-1.amazonaws.com/ras6-linux-base:0.90
 
-RUN yum -y update &&\ 
-    yum -y install git &&\
-    yum -y install wget &&\
-    yum -y install unzip &&\
-    yum -y install gcc &&\
-    yum -y install gcc-c++ &&\
-    yum -y install make &&\
-    yum -y install libcurl-devel.x86_64 &&\
-    yum -y install openssl-devel.x86_64 &&\
-    mkdir  /ras
-
-#names specific to artifacts downloaded from cloud-wat-resources on the HEC Nexus.  Replace version number in all args. Currently available 610,631,641. -bbb 20240229
-ARG NEXUS_RAS_URL=https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/ras/HEC-RAS_641_Linux_EngineOnly.zip
-ARG RAS_FILE=HEC-RAS_641_Linux_EngineOnly.zip
-ARG RAS_BIN_DIR=HEC-RAS_641_Linux_EngineOnly/bin
-ARG RAS_LIB_DIR=HEC-RAS_641_Linux_EngineOnly/libs
-#download RAS and put the file in the right place. Give them permissions to execute
-RUN wget ${NEXUS_RAS_URL} &&\ 
-    unzip ${RAS_FILE} &&\
-    mv /${RAS_LIB_DIR} /ras/libs &&\
-    mv /${RAS_BIN_DIR} /ras/bin &&\
-    chmod -R +x /ras/* 
-
-#set up Go
-RUN wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz -P / &&\
-    tar -xvzf go1.21.5.linux-amd64.tar.gz -C / 
 ENV GOROOT=/go
 ENV GOPATH=/src/go
 ENV PATH=/go/bin:$PATH
-
-#set up HDF, AK commmented rasmapperlib is using 1.12. may cause issues.  
-ARG HDF_FILE=hdf5-1.14.3.tar.gz 
-ARG HDF_NEXUS_URL=https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/hdf/hdf5-1.14.3.tar.gz
+ENV LD_LIBRARY_PATH=/hdf/lib
 ENV CGO_LDFLAGS="-L/hdf/lib"
 ENV CGO_CFLAGS="-I/hdf/include"
-ENV LD_LIBRARY_PATH=/hdf/lib
 
-RUN wget ${HDF_NEXUS_URL} &&\
-    mkdir /hdfsrc &&\
-    tar -xvzf ${HDF_FILE} --directory /hdfsrc --strip 2 &&\ 
-    cd /hdfsrc &&\
-    ./configure --prefix=/hdf --enable-shared --enable-ros3-vfd --enable-threadsafe --enable-unsupported &&\
-    make &&\
-    make install
+#names specific to artifacts downloaded from cloud-wat-resources on the HEC Nexus.  Replace version number in all args. Currently available 610,631,641. -bbb 20240229
+ARG RAS_DEPLOYMENT=EngineOnly
+ARG RAS_VERSION=HEC-RAS_631_Linux
+ARG RAS_ARCHIVE=${RAS_VERSION}_${RAS_DEPLOYMENT}.zip
+ARG NEXUS_RAS_URL=https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/ras/${RAS_ARCHIVE}
+
+#download RAS and put the file in the right place. Give them permissions to execute
+RUN wget ${NEXUS_RAS_URL} &&\ 
+    unzip ${RAS_ARCHIVE} &&\
+    mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/libs /ras/libs &&\
+    mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/bin /ras/bin &&\
+    chmod -R +x /ras/* &&\
+    wget https://go.dev/dl/go1.21.5.linux-amd64.tar.gz -P / &&\
+    tar -xvzf go1.21.5.linux-amd64.tar.gz -C / &&\
+    mkdir -p /sim/model
 
 #download test data.
-ARG NEXUS_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/BaldEagleDamBrk.g03.hdf"
-RUN wget ${NEXUS_TEST_DATA}
+#ARG NEXUS_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/BaldEagleDamBrk.g03.hdf"
+#RUN wget ${NEXUS_TEST_DATA}
 
-ARG KANAWHA_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/kanawha_test_data.zip"
-ARG KANAWHA_TEST_DATA_FILE="kanawha_test_data.zip"
-RUN wget ${KANAWHA_TEST_DATA} &&\
-    unzip ${KANAWHA_TEST_DATA_FILE}
+#ARG KANAWHA_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/kanawha_test_data.zip"
+#ARG KANAWHA_TEST_DATA_FILE="kanawha_test_data.zip"
+#RUN wget ${KANAWHA_TEST_DATA} &&\
+#    unzip ${KANAWHA_TEST_DATA_FILE}
 
 #Should/could condense this container into fewer layers. It was originally broken out to better understand what Randy was
 #doing before I messed with it -bbb
