establish separate run scripts for each build. adjust dockerfile to conform

--- a/Dockerfile_6.4.1.new
+++ b/Dockerfile_6.4.1.new
@@ -26,6 +26,10 @@ RUN wget ${NEXUS_RAS_URL} &&\
 
 COPY ./ /src/ras-runner
 
+RUN mv /src/ras-runner/runScripts/${RAS_VERSION}/* /src/ras-runner &&\
+    cd /src/ras-runner &&\
+    ls
+
 RUN cd /src/ras-runner &&\
     go mod tidy &&\
     go build
@@ -39,10 +43,14 @@ ENV LD_LIBRARY_PATH=/hdf/lib
 RUN mkdir -p /sim/model
 
 COPY --from=builder /ras /ras
-COPY --from=builder /src/ras-runner/ras-runner /ras/ras-runner
+COPY --from=builder /src/ras-runner /ras/ras-runner
 COPY --from=builder /hdf /hdf
 
-COPY run-model.sh /ras/run-model.sh
-COPY run-geom-preproc.sh /ras/run-geom-preproc.sh
+RUN cd /ras/ras-runner &&\
+    ls &&\
+    mv /ras/ras-runner/run-model.sh /ras/run-model.sh &&\
+    mv /ras/ras-runner/run-geom-preproc.sh /ras/run-geom-preproc.sh &&\
+    chmod +x /ras/run-model.sh &&\
+    chmod +x /ras/run-geom-preproc.sh
 
 CMD ["/ras/ras-runner"]
