--- a/Dockerfile_6.4.1
+++ b/Dockerfile_6.4.1
@@ -20,7 +20,7 @@ RUN wget ${NEXUS_RAS_URL} &&\
     mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/libs /ras/libs &&\
     mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/bin /ras/bin &&\
     chmod -R +x /ras/* &&\ 
-    wget https://golang.org/dl/go1.18.1.linux-amd64.tar.gz -P / &&\
+    wget https://go.dev/dl/go1.18.1.linux-amd64.tar.gz -P / &&\
     tar -xvzf go1.18.1.linux-amd64.tar.gz -C / &&\
     mkdir -p src/ras-runner 
 
