--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,39 +1,32 @@
-FROM 038611608639.dkr.ecr.us-east-1.amazonaws.com/ras6-linux-base:latest
+FROM testhdfbase
 
 ENV GOROOT=/go
 ENV GOPATH=/src/go
 ENV PATH=/go/bin:$PATH
-ENV LD_LIBRARY_PATH=/hdf/lib
-ENV CGO_LDFLAGS="-L/hdf/lib"
-ENV CGO_CFLAGS="-I/hdf/include"
+
 
 #names specific to artifacts downloaded from cloud-wat-resources on the HEC Nexus.  Replace version number in all args. Currently available 610,631,641. -bbb 20240229
 ARG RAS_DEPLOYMENT=EngineOnly
-ARG RAS_VERSION=HEC-RAS_631_Linux
+ARG RAS_VERSION=HEC-RAS_641_Linux
 ARG RAS_ARCHIVE=${RAS_VERSION}_${RAS_DEPLOYMENT}.zip
 ARG NEXUS_RAS_URL=https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/ras/${RAS_ARCHIVE}
 
+RUN mkdir -p /ras/libs
+RUN mkdir -p /ras/bin
+RUN apt update &&\ 
+    apt -y install git &&\
+    apt -y install gcc &&\
+    apt -y install make
 #download RAS and put the file in the right place. Give them permissions to execute
 RUN wget ${NEXUS_RAS_URL} &&\ 
     unzip ${RAS_ARCHIVE} &&\
     mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/libs /ras/libs &&\
     mv /${RAS_VERSION}_${RAS_DEPLOYMENT}/bin /ras/bin &&\
     chmod -R +x /ras/* &&\
-    wget https://go.dev/dl/go1.23.10.linux-amd64.tar.gz -P / &&\
-    tar -xvzf go1.23.10.linux-amd64.tar.gz -C / &&\
+    wget https://go.dev/dl/go1.24.12.linux-amd64.tar.gz -P / &&\
+    tar -xvzf go1.24.12.linux-amd64.tar.gz -C / &&\
     mkdir -p /sim/model
 
-#download test data.
-#ARG NEXUS_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/BaldEagleDamBrk.g03.hdf"
-#RUN wget ${NEXUS_TEST_DATA}
-
-#ARG KANAWHA_TEST_DATA="https://www.hec.usace.army.mil/nexus/repository/cloud-wat-resources/test-data/cc-ras-runner/kanawha_test_data.zip"
-#ARG KANAWHA_TEST_DATA_FILE="kanawha_test_data.zip"
-#RUN wget ${KANAWHA_TEST_DATA} &&\
-#    unzip ${KANAWHA_TEST_DATA_FILE}
-
-#Should/could condense this container into fewer layers. It was originally broken out to better understand what Randy was
-#doing before I messed with it -bbb
 
 
 
