--- a/Dockerfile_6.5.0
+++ b/Dockerfile_6.5.0
@@ -1,5 +1,5 @@
 #Set up the environment to build the cc-ras-runner plugin
-FROM ghcr.io/usace-cloud-compute/cc-hdf5-base:latest as builder
+FROM ghcr.io/usace-cloud-compute/cc-hdf5-ras-base:v1.0.0 as builder
 
 
 #names specific to artifacts downloaded from cloud-wat-resources on the HEC Nexus.  Replace version number in all args. Currently available 610,631,641. -bbb 20240229
